--- a/arch/arm/configs/fairphone-debug_defconfig
+++ b/arch/arm/configs/fairphone-debug_defconfig
@@ -1735,8 +1735,7 @@ CONFIG_DEVKMEM=y
 # CONFIG_SERIAL_MAX3107 is not set
 CONFIG_SERIAL_CORE=y
 CONFIG_SERIAL_CORE_CONSOLE=y
-CONFIG_SERIAL_MSM=y
-CONFIG_SERIAL_MSM_CONSOLE=y
+# CONFIG_SERIAL_MSM is not set
 CONFIG_SERIAL_MSM_HS=y
 CONFIG_SERIAL_MSM_HSL=y
 CONFIG_SERIAL_MSM_HSL_CONSOLE=y
